--- a/src/components/Cards/Cards.module.css
+++ b/src/components/Cards/Cards.module.css
@@ -21,5 +21,162 @@
    font-size: 17px;
 };
 
-/* in order to make this .badge-style of the Badges/Cards work , I need to go to Cards.js and import this style by writing there: "import Styles from "./Cards.module.css"; */
-/* in order to use the style inside the cards,I need also to paste "styles.badge" inside the classname (App.js)=>you must to use {} for this and, because  "position-absolute badge bg-danger " of the div is in a string, I have to convert this by using backticks, $-sign  and again a {} => to use it as a variable*/
+
+/* FLIP CARDS */
+/* Resets  */
+* {
+   box-sizing: border-box;
+   margin: 0;
+   padding: 0;
+ }
+ 
+ body,
+ html {
+   font-size: 16px;
+   font-family: Ubuntu;
+ }
+ 
+ main {
+   padding: 2rem 1.25rem;
+ }
+ 
+ .main__header {
+   padding-bottom: 2rem;
+ }
+ 
+ .main__headline {
+   margin-bottom: 0.5rem;
+ }
+ 
+ /* Card styles follow */
+ 
+ :root {
+   --card-height: 18rem;
+   --teal: #62a4ab;
+   --white: #fefefe;
+   --shadow-small: 0.125rem 0.125rem 0.25rem rgba(0, 0, 0, 0.15),
+     -0.0625rem -0.0625rem 0.125rem rgba(0, 0, 0, 0.1);
+   --shadow-medium: 0.25rem 0.25rem 0.5rem rgba(0, 0, 0, 0.15),
+     -0.125rem -0.125rem 0.25rem rgba(0, 0, 0, 0.1);
+   --card-radius: 0.25rem;
+ }
+ 
+ .card__back,
+ .card__front {
+   -webkit-backface-visibility: hidden; 
+   backface-visibility: hidden;
+   border-radius:var(--card-radius);
+   height:var(--card-height);
+   overflow:hidden;
+   width:var(--card-height);
+   position:absolute;
+   top: 0;
+ }
+ 
+ .card__back {
+   background-color: var(--white);
+   font-size: 0.875rem;
+   padding: 2rem 1.5rem;
+   transform: rotateY(180deg);
+ }
+ 
+ .card__front {
+   display: grid;
+ }
+ 
+ .card__button {
+   background: transparent;
+   border: 0 none;
+   border-radius: var(--card-radius);
+   box-shadow: var(--shadow-small);
+   height: var(--card-height);
+   position: relative;
+   transform: rotateY(0) scale(1);
+   transform-style: preserve-3d;
+   transition: transform 0.25s ease-in-out;
+   width: var(--card-height);
+ }
+ 
+ .card__button:focus,
+ .card__button:hover {
+   box-shadow: var(--shadow-medium);
+   cursor: pointer;
+   outline: 0 none;
+   transform: rotateY(0) scale(1.05);
+ }
+ 
+ .card__button.flipped:focus,
+ .card__button.flipped:hover {
+   transform: rotateY(180deg) scale(1.05);
+ }
+ 
+ .card__button.flipped {
+   transform: rotateY(180deg) scale(1);
+ }
+ 
+ .card__description {
+   display: grid;
+   grid-template-columns: 2fr 3fr;
+   grid-column-gap: 1rem;
+   grid-row-gap: 0.75rem;
+ }
+ 
+ .card__detail {
+   text-align: start;
+ }
+ 
+ .card__image {
+   grid-column: 1;
+   grid-row: 1;
+   height: var(--card-height);
+   object-fit: cover;
+   width: 100%;
+ }
+ 
+ .card__item {
+   perspective: 60rem;
+ }
+ 
+ .card__item--loading {
+   font-size: 1.5rem;
+   font-weight: 700;
+   grid-column: 1 / -1;
+   padding-bottom: 8rem;
+   width: 100%;
+ }
+ 
+ .card__list {
+   display: grid;
+   gap: 1.5rem;
+   grid-template-columns: repeat(auto-fit, minmax(18rem, 1fr));
+   justify-items: center;
+   list-style: none;
+ }
+ 
+ .card__name {
+   align-self: end;
+   background: var(--teal);
+   color: var(--white);
+   font-size: 1rem;
+   grid-column: 1;
+   grid-row: 1;
+   justify-self: start;
+   letter-spacing: 0.05rem;
+   margin-bottom: 0.75rem;
+   padding: 0.25rem 1.5rem 0.3rem 0.5rem;
+   text-align: start;
+   text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
+   text-transform: uppercase;
+ }
+ 
+ .card__term {
+   font-weight: bold;
+   text-align: end;
+ }
+ 
+ .card__term::after {
+   content: ": ";
+ }
+ 
+
+
