--- a/src/components/Cards/Cards.module.css
+++ b/src/components/Cards/Cards.module.css
@@ -4,6 +4,27 @@
    border-radius: 10px;
 }
 
+/* .cards {
+  text-align: center;
+}
+
+.popup{
+  height: 200px;
+  width: 50%;
+  background-color: mediumslateblue;
+  position:absolute;
+  top:25%;
+  right: 25%;
+}
+
+.popup-header{
+  display: flex;
+  justify-content:space-between ;
+  padding: 0 30px 0 15px;
+  border-bottom: 2px solid blue;
+} */
+
+
 /* .content{
    padding: 10px; 
 } */
@@ -22,9 +43,12 @@
 };
 
 
+
+
+
 /* FLIP CARDS */
 /* Resets  */
-* {
+/* * {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
@@ -47,10 +71,10 @@
  .main__headline {
    margin-bottom: 0.5rem;
  }
- 
+  */
  /* Card styles follow */
  
- :root {
+ /* :root {
    --card-height: 18rem;
    --teal: #62a4ab;
    --white: #fefefe;
@@ -179,4 +203,4 @@
  }
  
 
-
+ */
