--- a/src/App.css
+++ b/src/App.css
@@ -1,17 +1,21 @@
-.popup {
+.App {
+  background-color: #0b5dd774;
+}
+
+/* .popup {
   height: 500 px;
   width: 100%;
   background-color: rgb(193, 15, 101);
   top: 25%;
   right: 25%;
-}
+} */
 
-popup-header {
+/* popup-header {
   display: flex;
   justify-content: space-around;
   padding: 10px 15px 10px 15px;
   border-bottom: blue;
-}
+} */
 
 /* .App {
   text-align: center;
