--- a/src/components/Cards/Cards.module.css
+++ b/src/components/Cards/Cards.module.css
@@ -19,6 +19,12 @@ popup-header {
   padding: 0 15px 0 15 px;
 }
 
+/* .button {
+  border: 2px solid rgb(13, 110, 253);
+  border-radius: 10px;
+  font-family: "Ubuntu";
+} */
+
 /* .cards {
   text-align: center;
 }
