--- a/src/components/Cards/Cards.module.css
+++ b/src/components/Cards/Cards.module.css
@@ -66,6 +66,7 @@ popup-header {
 /* The flip card container - set the width and height to whatever you want. We have added the border property to demonstrate that the flip itself goes out of the box on hover (remove perspective if you don't want the 3D effect */
 .flipCard {
   background-color: transparent;
+  /* border-radius: 10px 10px 0 0; */
   width: 300px;
   height: 500px;
   /* border: 1px solid #f1f1f1; */
@@ -91,6 +92,7 @@ popup-header {
 .flipCardFront,
 .flipCardBack {
   position: absolute;
+  border-radius: 10px 10px 10px 10px;
   width: 100%;
   height: 100%;
   -webkit-backface-visibility: hidden; /* Safari */
@@ -99,13 +101,13 @@ popup-header {
 
 /* Style the front side (fallback if image is missing) */
 .flipCardFront {
-  background-color: #bbb;
-  color: black;
+  background-color: white;
+  color: #070784;
 }
 
 /* Style the back side */
 .flipCardBack {
   background-color: dodgerblue;
-  color: white;
+  color: 070784;
   transform: rotateY(180deg);
 }
